# shape_constraints

./: README.md  pyproject.toml
shape_constraints/: __init__.py  constraints.py
tests/: test_numpy.py  test_pytorch.py  test_tensorflow.py
