[tool.poetry]
name = "shape_constraints"
version = "0.0.1"
description = "Python decorator to annotate and check parameter. shapes for tensors and numerical programs."
authors = ["Thomas Deegan <tadeegan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
numpy = "^1.0.0"
tensorflow = "^2.5.0"
torch = "^1.9.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
